chore: configure project deps with uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,17 @@
 [project]
 name = "saocarlos-tech-jobs-aggregator"
 version = "0.1.0"
-description = "Add your description here"
+description = "Agregador de vagas de TI em São Carlos–SP a partir de fontes públicas"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.11"
+
+dependencies = [
+    "requests",
+    "pdfplumber",
+]
+
+[tool.uv]   
+dev-dependencies = [
+    "ruff",
+    "black",
+]
